fix: gap di row

--- a/css/style.css
+++ b/css/style.css
@@ -146,6 +146,7 @@ img {
 @media screen and (max-width: 480px) {
   .row {
     flex-wrap: wrap;
+    gap: 4rem;
   }
 
   .lessons .col {
